force-app/main/default/objects/Cadence_Touchpoint__c/Cadence_Touchpoint__c.object-meta.xml
<CustomObject>
    <label>Cadence Touchpoint</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Cadence Touchpoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cadence_Touchpoints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>