force-app/main/default/objects/Cadence_Touchpoint__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cadence_Touchpoints</relationshipLabel>
    <relationshipName>Cadence_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>