force-app/main/default/objects/Cadence_Touchpoint__c/fields/Cadence__c.field-meta.xml
<CustomField>
    <fullName>Cadence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadence</label>
    <referenceTo>Cadence__c</referenceTo>
    <relationshipLabel>Cadence_Touchpoints</relationshipLabel>
    <relationshipName>Cadence_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>