force-app/main/default/objects/Cadence_Touchpoint__c/fields/Cadence_Touchpoint_Step__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Touchpoint_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cadence Touchpoint Step</label>
    <referenceTo>Cadence_Step__c</referenceTo>
    <relationshipLabel>Cadence_Touchpoints</relationshipLabel>
    <relationshipName>Cadence_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>