force-app/main/default/objects/Cadence_Touchpoint__c/fields/CarRecord__c.field-meta.xml
<CustomField>
    <fullName>CarRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Record</label>
    <referenceTo>Cadence_Assignment_Record__c</referenceTo>
    <relationshipLabel>Cadence_Touchpoints</relationshipLabel>
    <relationshipName>Cadence_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>