force-app/main/default/objects/Cadence_Touchpoint__c/fields/EmailSentMethod__c.field-meta.xml
<CustomField>
    <fullName>EmailSentMethod__c</fullName>
    <inlineHelpText>What method was used to send the email?</inlineHelpText>
    <label>Email Sent Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sent By Email Address</fullName>
            </value>
            <value>
                <fullName>Sent By Workflow</fullName>
            </value>
            <value>
                <fullName>Sent Using Template and TargetId</fullName>
            </value>
            <value>
                <fullName>Not Enough Email Information</fullName>
            </value>
            <value>
                <fullName>Sent Plain Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>