force-app/main/default/objects/Cadence_Touchpoint__c/fields/IsLatestTouchpoint__c.field-meta.xml
<CustomField>
    <fullName>IsLatestTouchpoint__c</fullName>
    <formula>CarRecord__r.LatestTouchpoint__c =  Id</formula>
    <inlineHelpText>Is this the latest touchpoint record for this CAR?</inlineHelpText>
    <label>Is Latest Touchpoint</label>
    <type>Checkbox</type>
</CustomField>