force-app/main/default/objects/Cadence_Touchpoint__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cadence_Touchpoints</relationshipLabel>
    <relationshipName>Cadence_Touchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>