force-app/main/default/objects/Cadence_Touchpoint__c/fields/Override_Email__c.field-meta.xml
<CustomField>
    <fullName>Override_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Email</label>
    <type>Checkbox</type>
</CustomField>