force-app/main/default/objects/Cadence_Touchpoint__c/fields/Parent_ObjectStatus__c.field-meta.xml
<CustomField>
    <fullName>Parent_ObjectStatus__c</fullName>
    <formula>CASE( TouchpointObject__c , &apos;Account&apos;, TEXT(AccountId__r.Account_Status__c ), &apos;Lead&apos;, TEXT(LeadId__r.Status) , &apos;Opportunity&apos;, TEXT(OpportunityId__r.StageName) , ContactId__r.Contact_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent_ObjectStatus</label>
    <type>Text</type>
</CustomField>