force-app/main/default/objects/Cadence_Touchpoint__c/fields/ReferralAccount__c.field-meta.xml
<CustomField>
    <fullName>ReferralAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Referral Account associated with this Touchpoint</inlineHelpText>
    <label>Referral Account</label>
    <referenceTo>Referral_Account__c</referenceTo>
    <relationshipLabel>Cadence_Touchpoints</relationshipLabel>
    <relationshipName>CadenceTouchpoints</relationshipName>
    <type>Lookup</type>
</CustomField>