force-app/main/default/objects/Cadence_Touchpoint__c/fields/RepeatCount__c.field-meta.xml
<CustomField>
    <fullName>RepeatCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Repeat Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>