force-app/main/default/objects/Cadence_Touchpoint__c/fields/SignificantTextEligible__c.field-meta.xml
<CustomField>
    <fullName>SignificantTextEligible__c</fullName>
    <formula>IF(NOT(ISBLANK(CarRecord__r.LeadId__c )), (CarRecord__r.LeadId__r.Consent_to_Text__c &amp;&amp; NOT(CarRecord__r.LeadId__r.tdc_tsw__SMS_Opt_out__c)), (CarRecord__r.AccountId__r.SignificantContact__r.Consent_to_Text__c &amp;&amp; NOT(CarRecord__r.AccountId__r.SignificantContact__r.tdc_tsw__SMS_Opt_out__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SignificantTextEligible</label>
    <type>Checkbox</type>
</CustomField>