force-app/main/default/objects/Cadence_Touchpoint__c/fields/Skip_Reason__c.field-meta.xml
<CustomField>
    <fullName>Skip_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Skip Reason</label>
    <type>TextArea</type>
</CustomField>