force-app/main/default/objects/Cadence_Touchpoint__c/fields/Step_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>Step_Email_Template__c</fullName>
    <formula>Cadence_Touchpoint_Step__r.EmailTemplateIds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Step_Email_Template</label>
    <type>Text</type>
</CustomField>