force-app/main/default/objects/Cadence_Touchpoint__c/fields/StepCounter__c.field-meta.xml
<CustomField>
    <fullName>StepCounter__c</fullName>
    <inlineHelpText>The number of steps created for this cadence - doesn&apos;t equate to Step Number.</inlineHelpText>
    <label>Step Counter</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>