force-app/main/default/objects/Cadence_Touchpoint__c/fields/StepType__c.field-meta.xml
<CustomField>
    <fullName>StepType__c</fullName>
    <formula>Text(Cadence_Touchpoint_Step__r.Touchpoint_Type__c)</formula>
    <inlineHelpText>What is the touchpoint type of the step?</inlineHelpText>
    <label>Step Type</label>
    <type>Text</type>
</CustomField>