force-app/main/default/objects/Cadence_Touchpoint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cadence__c</columns>
    <columns>Cadence_Touchpoint_Step__c</columns>
    <columns>AccountId__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>