force-app/main/default/objects/Cadence_Touchpoint__c/listViews/Email_Step_by_workflow.listView-meta.xml
<ListView>
    <fullName>Email_Step_by_workflow</fullName>
    <columns>NAME</columns>
    <columns>Cadence__c</columns>
    <columns>Cadence_Touchpoint_Step__c</columns>
    <columns>EmailTemplateName__c</columns>
    <columns>EmailSentMethod__c</columns>
    <columns>AccountId__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StepType__c</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>EmailSentMethod__c</field>
        <operation>equals</operation>
        <value>Sent By Workflow</value>
    </filters>
    <label>Email Step - by workflow</label>
</ListView>