force-app/main/default/objects/Cadence_Touchpoint__c/listViews/Email_Step_Completed.listView-meta.xml
<ListView>
    <fullName>Email_Step_Completed</fullName>
    <columns>NAME</columns>
    <columns>Cadence__c</columns>
    <columns>Cadence_Touchpoint_Step__c</columns>
    <columns>EmailSentMethod__c</columns>
    <columns>EmailTemplateIdUsed__c</columns>
    <columns>LeadId__c</columns>
    <columns>ContactId__c</columns>
    <columns>Close_Date__c</columns>
    <columns>Status__c</columns>
    <columns>LastUpdateMethod__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StepType__c</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>StepCompletedByRep__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </filters>
    <label>Email Step Completed</label>
</ListView>