force-app/main/default/objects/Cadence_Touchpoint__c/listViews/Email_With_Exception.listView-meta.xml
<ListView>
    <fullName>Email_With_Exception</fullName>
    <columns>NAME</columns>
    <columns>Cadence__c</columns>
    <columns>EmailTemplateName__c</columns>
    <columns>EmailSentMethod__c</columns>
    <columns>AccountId__c</columns>
    <columns>Status__c</columns>
    <columns>EmailException__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StepType__c</field>
        <operation>equals</operation>
        <value>Email</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>EmailException__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Email With Exception</label>
</ListView>