force-app/main/default/objects/Cadence_Touchpoint__c/listViews/My_Open_Touchpoints.listView-meta.xml
<ListView>
    <fullName>My_Open_Touchpoints</fullName>
    <columns>NAME</columns>
    <columns>StepType__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>My Open Touchpoints</label>
</ListView>