force-app/main/default/objects/Cadence_Touchpoint__c/listViews/NSS_Outbound_Current_Client_Other_Cadence_Touchpoint.listView-meta.xml
<ListView>
    <fullName>NSS_Outbound_Current_Client_Other_Cadence_Touchpoint</fullName>
    <filterScope>Queue</filterScope>
    <label>NSS Outbound Current Client Other</label>
    <queue>NSS_Outbound_Current_Client_Other</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>