force-app/main/default/objects/Cadence_Touchpoint__c/listViews/NSS_Outbound_Prospect_Tier_4_Cadence_Touchpoint.listView-meta.xml
<ListView>
    <fullName>NSS_Outbound_Prospect_Tier_4_Cadence_Touchpoint</fullName>
    <filterScope>Queue</filterScope>
    <label>NSS Outbound Prospect Tier 4</label>
    <queue>NSS_Outbound_Prospect_Tier_4</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>