force-app/main/default/objects/Cadence_Touchpoint__c/listViews/Oasis_SDR_Cadence_Touchpoint.listView-meta.xml
<ListView>
    <fullName>Oasis_SDR_Cadence_Touchpoint</fullName>
    <filterScope>Queue</filterScope>
    <label>Oasis SDR</label>
    <queue>Oasis_SDR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>