force-app/main/default/objects/Cadence_Touchpoint__c/listViews/Research_Send_To_Partner.listView-meta.xml
<ListView>
    <fullName>Research_Send_To_Partner</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Research Send To Partner</label>
</ListView>