force-app/main/default/objects/Cadence_Touchpoint__c/listViews/S2P_Channel_to_NSS_Cadence_Touchpoint.listView-meta.xml
<ListView>
    <fullName>S2P_Channel_to_NSS_Cadence_Touchpoint</fullName>
    <filterScope>Queue</filterScope>
    <label>S2P Channel to NSS</label>
    <queue>S2P_Channel_to_NSS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>