force-app/main/default/objects/Cadence_Touchpoint__c/listViews/S2P_PEO_to_SDR_Cadence_Touchpoint.listView-meta.xml
<ListView>
    <fullName>S2P_PEO_to_SDR_Cadence_Touchpoint</fullName>
    <filterScope>Queue</filterScope>
    <label>S2P PEO to SDR</label>
    <queue>S2P_PEO_to_SDR</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>